# ComplexHeatmap-python

./: README.md  pyproject.toml
complexheatmap/: __init__.py  _color.py  _globals.py  _utils.py  annotation_functions.py  color_mapping.py  density_heatmap.py  grid_extensions.py  heatmap.py  heatmap_3d.py  heatmap_annotation.py  heatmap_list.py  legends.py  single_annotation.py  upset.py
complexheatmap/_interactive/: __init__.py  datagrid.py  metadata.py  schema.py  templates.py  widget.py
tests/: test_annotation_extended.py  test_color_mapping.py  test_draw_coverage.py  test_from_r_tests.py  test_globals_and_legends.py  test_heatmap_3d.py  test_interactive_schema.py  test_r_edge_cases.py  test_r_invariants.py  test_utils_extended.py
tutorials/: 02-single_heatmap-v2.ipynb  03-heatmap_annotations.ipynb  04-a_list_of_heatmaps.ipynb  05-legends.ipynb  06-heatmap_decoration.ipynb  07-oncoprint.ipynb  08-upset-v2.ipynb  10-integrate-v2.ipynb  11-other-high-level-plots.ipynb  12-3d-heatmap.ipynb  13-genome-level-heatmap-v2.ipynb  14-examples-v2.ipynb  15-other-tricks.ipynb
